tests/valid/module/use_alias_function_unqualified_call.facet
pub mod api {
  pub fn id(x: affine isize) -> affine isize { x }
}

use api::id as call_id;

fn main() -> affine isize {
  (call_id 1)
}
