tests/invalid/module/use_private_item.facet
mod api {
  fn id(x: affine isize) -> affine isize { x }
}

use api::id;

fn main() -> affine isize {
  (id 1)
}
